made minor modifications for Stamen's tiles to display

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -13,3 +13,5 @@
 
   <link rel="stylesheet" href="{{relative}}assets/css/style.css" />
   <link rel="shortcut icon" href="{{relative}}assets/img/favicon.ico" />
+
+  <script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.2.4"></script>
