--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SF Parklet Map</title>
+  <title>REDD Properties</title>
   {% include scripts.html %}
 </head>
 
