--- a/assets/css/leaflet.awesome-markers.css
+++ b/assets/css/leaflet.awesome-markers.css
@@ -47,6 +47,8 @@ Version: 1.0
 } */
 
 /* Colors */
+
+/* 
 .awesome-marker-icon-red {
   background-position: 0 0;
 }
@@ -86,3 +88,4 @@ Version: 1.0
 .awesome-marker-icon-cadetblue {
   background-position: -324px 0;
 }
+*/
