--- a/assets/css/leaflet.awesome-markers.css
+++ b/assets/css/leaflet.awesome-markers.css
@@ -35,12 +35,15 @@ Version: 1.0
  }
 }
 
+/*
 .awesome-marker i {
   color: #333;
   margin-top: 10px;
   display: inline-block;
   font-size: 14px;
 }
+
+*/ 
 
 /* .awesome-marker .icon-white {
   color: #fff;
