--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
 	box-shadow: 0 3px 14px rgba(0,0,0,0.3);
 }
 
-/* .popHead {
+ .popHead {
 	color: #ffffff;
 	background-color: #428bca;
 	padding: 20px 10px;
@@ -20,7 +20,7 @@
 	border-top-right-radius: 5px;
 	text-align: center;
 }
-*/
+
 
 div.metadata {
 	padding: 20px 10px 5px;
