--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,3 +1,6 @@
+<div class="col-md-12">
+	<p>Testing</p>
+</div>
 <div class="navbar-inverse navbar-fixed-top">
 	<div class="row">
 		<div class="col-md-4 col-md-offset-1 heading-content">
