testing nav stuff 2

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,7 @@
-<div class="col-md-12">
+<div class="navbar-fixed-top">
+	<div class="container">
 	<p>Testing</p>
+</div>
 </div>
 <div class="navbar-inverse navbar-fixed-top">
 	<div class="row">
