--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,8 +1,17 @@
-<div class="navbar-fixed-top">
-	<div class="container">
-	<p>Testing</p>
+ <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Project name</a>
+        </div>
+    </div>
 </div>
-</div>
+
 <div class="navbar-inverse navbar-fixed-top">
 	<div class="row">
 		<div class="col-md-4 col-md-offset-1 heading-content">
