--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,7 +6,7 @@
     </div>
 </div>
 
-<div class="navbar-inverse navbar-fixed-top">
+<div class="navbar-inverse">
 	<div class="row">
 		<div class="col-md-4 col-md-offset-1 heading-content">
 
