--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,7 +5,7 @@
         </div>
     </div>
 </div>
-<div class="">
+<div class="testing">
 	<div class="row">
 		<div class="col-md-4 col-md-offset-1 heading-content">
 		</div>
