--- a/_layouts/location.html
+++ b/_layouts/location.html
@@ -53,10 +53,7 @@ layout: default
 
 
 <script>
-  var markerIconActive = L.AwesomeMarkers.icon({
-    icon: 'coffee', 
-    color: 'blue'
-  });
+  var markerIconActive = L.MakiMarkers.icon({color: "#b0b", size: "m"});
 
   var popupContent = '<div class="popHead" class="text-center"><strong>{{ page.address }}</strong></div><div class="metadata"><strong>Host:</strong> {{ page.title }}<br /><strong>Opened:</strong> {{ page.install_date }}</div><div class="text-center"><a href="http://maps.google.com/?q={{page.latitude}},{{page.longitude}}" type="button" class="btn btn-default btn-xs">Get Directions <i class="icon-chevron-sign-right" style="color:#428bca;"></i></a></div>';
 
