--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -6,6 +6,7 @@
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   <script src="{{relative}}assets/js/bootstrap.min.js"></script>
   <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+  <script src="{{relative}}assets/js/Leaflet.MakiMarkers.js"></script>
   <link rel="stylesheet" href="{{relative}}assets/css/leaflet.awesome-markers.css">
   <script src="{{relative}}assets/js/leaflet.awesome-markers.min.js"></script>
 
