modified the nav bar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
  <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="http://www.ltsc.org">Little Tokyo Service Center </a>
+          <a class="navbar-brand" href="http://www.ltsc.org">LTSC Real Estate Development Portfolio</a>
         </div>
     </div>
 </div>
