modification to nav bar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
  <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="http://www.ltsc.org">LTSC Real Estate Development Portfolio</a>
+          <a class="navbar-brand oy" href="http://www.ltsc.org">LTSC Home -> </a> <a class="navbar-brand" href="http://ltsc.org/index.php/ltsc-programs">LTSC Programs <span id="arrow">-></span> </a> <a class="navbar-brand oy" href="http://ltsc.org/index.php/ltsc-programs/real-estate-development">Real Estate Development -> </a> <a class="navbar-brand oy" href="http://redd.ltsc.org/">REDD Properties</a>
         </div>
     </div>
 </div>
