--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="{{relative}}assets/css/leaflet.awesome-markers.css">
   <script src="{{relative}}assets/js/leaflet.awesome-markers.min.js"></script>
 
-  <link rel="stylesheet" href="{{relative}}assets/css/style.css" />
+  <link rel="stylesheet" media="all" href="{{relative}}assets/css/style.css" />
   <link rel="shortcut icon" href="{{relative}}assets/img/favicon.ico" />
 
   <script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.2.4"></script>
