--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,10 @@
  <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
+
         <div class="navbar-header">
-          <a class="navbar-brand" href="http://www.ltsc.org">LTSC Home <span id="arrow">-></span> </a> <a class="navbar-brand oy" href="http://ltsc.org/index.php/ltsc-programs">LTSC Programs -></a> <a class="navbar-brand oy" href="http://ltsc.org/index.php/ltsc-programs/real-estate-development">Real Estate Development -> </a> <a class="navbar-brand oy" href="http://redd.ltsc.org/">REDD Properties</a>
+        	<img id="ltsc_logo" src="/assets/img/LTSC_Logo_image_only_40.png" height="40" width="40">
+          <a class="navbar-brand" href="http://www.ltsc.org">Little Tokyo Service Center </a>
+
         </div>
     </div>
 </div>
