--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  <meta name="viewport" content="width=device-width; initial-scale=1.0">
-  <title>REDD Properties</title>
+  <title>LTSC Properties</title>
   {% include scripts.html %}
 </head>
 
