--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,7 +2,7 @@
       <div class="container">
 
         <div class="navbar-header">
-        	<img id="ltsc_logo" src="../assets/img/LTSC_Logo_image_only_40.png" height="40" width="40">
+        	<img id="ltsc_logo" src="{{ site.baseurl }}/assets/img/LTSC_Logo_image_only_40.png" height="40" width="40">
           <a class="navbar-brand" href="http://www.ltsc.org">Little Tokyo Service Center </a>
 
         </div>
