last minute modifications/corrections

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,15 +2,15 @@
       <div class="container">
 
         <div class="navbar-header">
-        	<img id="ltsc_logo" src="http://arubyist.github.io/jekyllmap_test/assets/img/LTSC_Logo_image_only_40.png" height="40" width="40">
+          <img id="ltsc_logo" src="{{base.url}}/assets/img/LTSC_Logo_image_only_40.png" height="40" width="40">
           <a class="navbar-brand" href="http://www.ltsc.org">Little Tokyo Service Center </a>
 
         </div>
     </div>
 </div>
 <div class="testing">
-	<div class="row">
-		<div class="col-md-4 col-md-offset-1 heading-content">
-		</div>
-	</div>
+  <div class="row">
+    <div class="col-md-4 col-md-offset-1 heading-content">
+    </div>
+  </div>
 </div>
